fixed: added flex display & flex-wrap: wrap to .reviews

--- a/styles/reviews.css
+++ b/styles/reviews.css
@@ -1,3 +1,8 @@
+.reviews {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .reviewItem {
     font-size: 15px;
     text-align: left;
@@ -5,15 +10,16 @@
     text-indent: 0;
     margin-top: 1%;
     margin-bottom: 1%;
+    margin-right: 1%;
     padding: 15px;
     background-color: #2b2b2b;
     border-radius: 10px;
     border: #000000 solid 1px;
-    width: 35%;
+    width: 25%;
 }
 
 .load__button {
-    width: 25%;
+    width: 27.3%;
     height: 35px;
     background: rgb(44, 43, 43);
     letter-spacing: normal;
@@ -24,4 +30,3 @@
     border-radius: 10px;
     border: #000000 solid 1px;
 }
-
